# animfetch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  planets.py  pyproject.toml  setup.py  snowy.py
anim/: 2.txt
animfetch/: main.py  provider.py
animfetch/providers/: planets.py  snowy.py
animfetch/providers/source/: planets_cpp.cpp
